# MPC-BESS-ERCOT

./: .gitignore  LICENSE  README.md  SIMULATION_GUIDE.md  interval_analysis_20240601.csv  main.py  plotting-full-results.py  pyproject.toml  simulation_results_20240601.csv
notebooks/: analysis.ipynb
references/: 1 Page Project Plan.md
src/: README.md  __init__.py  battery_model.py  forecaster.py  globals.py  simulator.py  stage1_da_scheduler.py  stage1_da_scheduler.py.orig  stage2_rt_mpc.py  utils.py
src/utils/: load_ercot_data.py  utils.py
tests/: standalone_multi_day_stage2_rt_mpc.py  standalone_stage2_rt_mpc.py  test_da_scheduler.py  test_da_scheduler_month.py  test_forecast.py  test_modules.py  test_multi_day_stage2_rt_mpc.py  test_regression_forecaster.py  test_stage2_rt_mpc.py
