[project]
name = "mpc-bess-ercot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.5.0",
    "numpy>=2.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pytest>=9.0.2",
    "pyomo>=6.9.5",
    "logging>=0.4.9.6",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "xgboost>=3.1.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
